# internal/delivery/rest/v1/account/routes.go
@@ -1,6 +1,7 @@
 package account
 
 import (
+	"github.com/banggok/boillerplate_architecture/internal/delivery/rest/v1/account/login"
 	"github.com/banggok/boillerplate_architecture/internal/delivery/rest/v1/account/verify"
 	"github.com/gin-gonic/gin"
 )
@@ -8,4 +9,5 @@ import (
 func RegisterRoutes(v1 *gin.RouterGroup) {
 	accounts := v1.Group("/accounts")
 	verify.Register(accounts)
+	login.Register(accounts)
 }
