# internal/delivery/rest/v1/account/verify/handler.go
@@ -15,12 +15,22 @@ type handlerImpl struct {
 	usecase usecase
 }
 
-// verify implements handler.
+// verify handles account verification
+// @Summary Verify Account
+// @Description Verifies an account using a token provided in the URL path
+// @Tags Accounts
+// @Accept json
+// @Produce json
+// @Param token path string true "Verification token"
+// @Success 200 {object} Response
+// @Failure 400 {object} custom_errors.CustomError "Invalid request payload"
+// @Failure 422 {object} custom_errors.CustomError "Failed to verify account"
+// @Router /api/v1/accounts/verify/{token} [get]
 func (h *handlerImpl) verify(c *gin.Context) {
 	request := Request{}
 
 	// Parse and validate the request payload
-	request.ParseAndValidateRequest(c, nil)
+	request.ParseAndValidateRequest(c)
 
 	// Execute the usecase
 	account, err := h.usecase.execute(c, request)
