# internal/delivery/rest/v1/tenant/register/usecase.go
@@ -1,6 +1,8 @@
 package register
 
 import (
+	"fmt"
+
 	"github.com/banggok/boillerplate_architecture/internal/config/app"
 	"github.com/banggok/boillerplate_architecture/internal/data/entity"
 	valueobject "github.com/banggok/boillerplate_architecture/internal/data/entity/value_object"
@@ -23,16 +25,25 @@ type usecaseImpl struct {
 
 // execute implements TenantRegisterUsecase.
 func (t *usecaseImpl) execute(ctx *gin.Context, request Request) (entity.Tenant, error) {
-	accountVerification, err := entity.NewAccountVerification(valueobject.EMAIL_VERIFICATION, nil)
+	emailVerification, err := entity.NewAccountVerification(valueobject.EMAIL_VERIFICATION, nil)
 	if err != nil {
 		return nil, custom_errors.New(
 			err,
 			custom_errors.InternalServerError,
 			"failed to create new account entity")
 	}
+
+	resetPassword, err := entity.NewAccountVerification(valueobject.RESET_PASSWORD, nil)
+	if err != nil {
+		return nil, custom_errors.New(
+			err,
+			custom_errors.InternalServerError,
+			"failed to create new account entity")
+	}
+
 	account, plainPassword, err := entity.NewAccount(
 		entity.NewAccountIdentity(request.Account.Name, request.Account.Email, request.Account.Phone, nil),
-		nil, &[]entity.AccountVerification{accountVerification})
+		nil, &[]entity.AccountVerification{emailVerification, resetPassword})
 	if err != nil {
 		return nil, custom_errors.New(
 			err,
@@ -59,27 +70,30 @@ func (t *usecaseImpl) execute(ctx *gin.Context, request Request) (entity.Tenant,
 			"failed to new tenant")
 	}
 
-	go func() {
-		cfg := app.AppConfig
-		if cfg.Environment != app.ENV_PROD {
-			return
-		}
-		if tenant.Accounts() == nil || len(*tenant.Accounts()) == 0 {
-			logrus.Errorf("tenant account was empty")
-		}
-		account := (*tenant.Accounts())[0]
-		if err := t.emailService.SendWelcomeEmail(
-			account.Email(),
-			email.WelcomeData{
-				TenantName: tenant.Name(),
-				Username:   account.Email(),
-				Password:   *plainPassword,
-				LoginURL:   "",
-			},
-		); err != nil {
-			logrus.Errorf("failed to send email: %v", err.Error())
-		}
-	}()
+	if emailVerification.Token() == nil {
+		return nil, custom_errors.New(nil, custom_errors.InternalServerError, "token was empty")
+	}
+
+	if app.AppConfig.Environment == app.ENV_PROD {
+		url := fmt.Sprintf("%s/verify/%s", app.AppConfig.BaseUrl, *emailVerification.Token())
+		go func() {
+			if tenant.Accounts() == nil || len(*tenant.Accounts()) == 0 {
+				logrus.Errorf("tenant account was empty")
+			}
+			account := (*tenant.Accounts())[0]
+			if err := t.emailService.SendWelcomeEmail(
+				account.Email(),
+				email.WelcomeData{
+					TenantName:      tenant.Name(),
+					Username:        account.Email(),
+					Password:        *plainPassword,
+					VerificationURL: url,
+				},
+			); err != nil {
+				logrus.Errorf("failed to send email: %v", err.Error())
+			}
+		}()
+	}
 
 	return tenant, nil
 }
